ASUSFETest/src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>ASU Service</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed%3A Customer Self-Resolved</fullName>
        </values>
        <values>
            <fullName>Closed%3A Customer Unresponsive</fullName>
        </values>
        <values>
            <fullName>Closed%3A Duplicate</fullName>
        </values>
        <values>
            <fullName>Closed%3A Forwarded</fullName>
        </values>
        <values>
            <fullName>Closed%3A Resolved</fullName>
        </values>
        <values>
            <fullName>Closed%3A SPAM</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Waiting on Customer</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <controllingField>Functional_Group__c</controllingField>
            <picklistValues>
                <fullName>1098-T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counselor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downtown Campus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate Applicant Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late Fee Appeals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outgoing Transcripts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poly Campus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registrar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RegTech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scholarship Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsor Billings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsored Apps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Business Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tempe Cashiering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIP Late Registration Appeals</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ChangeCaseOwner__Case_Owner2__c</fullName>
        <formula>HYPERLINK(
	IF(BEGINS(OwnerId, &apos;00G&apos;),
		&apos;p/own/Queue/d?id=&apos;&amp;OwnerId,
		OwnerId
	),
	IF(BEGINS(OwnerId, &apos;00G&apos;),
		Owner:Queue.Name,
		Owner:User.FirstName &amp; &apos; &apos; &amp; Owner:User.LastName
	)
) &amp; &apos; &apos; &amp; HYPERLINK( 
	&apos;javascript:u=&quot;/apex/ChangeCaseOwner__Case_Owner_Change?cid=&apos;&amp;Id&amp;&apos;&quot;;if(typeof srcUp == &quot;function&quot;){srcUp(u+&quot;&amp;isdtp=vw&quot;)}else{location=u};&apos;,
	&apos;[Change]&apos;, 
	&apos;_self&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChangeCaseOwner__Case_Owner_Name__c</fullName>
        <description>This field is no longer necessary as of the Summer 2013 release</description>
        <label>zDep Case Owner Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_emoticon__c</fullName>
        <formula>IF(   (TEXT( Customer_emoticon_value__c ) ==&quot;&quot;)  ,&quot;&quot; ,IMAGE( &quot;resource/pkb_mobile/imgs/&quot;+TEXT( Customer_emoticon_value__c ) +&quot;.png&quot; ,TEXT( Customer_emoticon_value__c )  ,20,20))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How the customer was feeling when he enter the support case.</inlineHelpText>
        <label>Customer emoticon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_emoticon_value__c</fullName>
        <description>Store the emoticon as a text value.</description>
        <label>Customer emoticon value</label>
        <picklist>
            <picklistValues>
                <fullName>happy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>confused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>annoyed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>frustrated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Forward_Case_Comments__c</fullName>
        <inlineHelpText>Any text entered here will be included in the email sent to a unit or individual when this Case is &quot;Closed: Forwarded&quot;.</inlineHelpText>
        <label>Forward Case Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Forward_To_Email_Calculation__c</fullName>
        <formula>IF(CONTAINS(TEXT(Forward_To_Unit__c),&quot;@&quot;)
,
MID(TEXT(Forward_To_Unit__c),
FIND(&quot;(&quot;,TEXT(Forward_To_Unit__c))+1,
LEN(TEXT(Forward_To_Unit__c)) - FIND(&quot;(&quot;,TEXT(Forward_To_Unit__c))-1)
,&quot;&quot;)</formula>
        <inlineHelpText>A list of emails associated with the &quot;Forward Case To Department&quot;. If the &quot;Forward Case To Email&quot; is left blank, it is automatically populated with this address.</inlineHelpText>
        <label>Forward To Email Calculation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forward_To_Email__c</fullName>
        <inlineHelpText>For most &quot;Forward To Units&quot; this email will be automatically provided. If forwarding to &quot;Other Unit&quot; an to an Individual, this field is required.</inlineHelpText>
        <label>Forward To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Forward_To_Unit__c</fullName>
        <label>Forward To Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Admission Services - International (asuinternational@asu.edu)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admission Services - Undergraduate (admissions@asu.edu)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni Association (alumni@asu.edu)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American English and Culture Program - AECP (aecp@asu.edu)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASU Online Admission (undergraduate-inquiry@asu.edu)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Athletics (SparkyCares@asu.edu)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bookstores (sundevil@bkstr.com)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Career Services (careerservices@asu.edu)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clubs and Organizations - Downtown (downtownclubs@asu.edu)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clubs and Organizations - Polytechnic (polytechnicclubs@asu.edu)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clubs and Organizations - Tempe (tempeclubs@asu.edu)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clubs and Organizations - West (westclubs@asu.edu)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DARS (dars-q@asu.edu)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dining (SunDevilDining@gmail.com)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disability Resource Center (drc@asu.edu)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Year Success (fys@asu.edu)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate Education (grad-gps@asu.edu)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greek Life (greeklife@asu.edu)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immunization - Health Services (measles@asu.edu)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Students and Scholars Center (isso@asu.edu)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Math Placement (placement.math@asu.edu)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orientation (orientation@asu.edu)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parking and Transit Services (parking@asu.edu)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Study Abroad (studyabroad@asu.edu)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sun Card Services (sundevilcardinfo@asu.edu)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer Systems Development (articulation@asu.edu)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University Housing (housing@asu.edu)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veterans Center (VeteransServices@asu.edu)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Unit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Functional_Group__c</fullName>
        <label>Functional Group</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Admission Services - Graduate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Aid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registrar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Business Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Unit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Illegal_Characters_In_Outbound_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Set to TRUE (via Workflow) if an Email is sent containing illegal characters (e.g. the &quot;&lt;&lt;&quot; in a Email Template that indicate a staff member should fill out missing information.</inlineHelpText>
        <label>Illegal Characters In Outbound Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Request_Sent_To_Addresses__c</fullName>
        <inlineHelpText>If this case was created because a customer sent an email to one of ASU&apos;s service addresses, all addresses that initial email was sent to are stored here.</inlineHelpText>
        <label>Initial Request Sent To Addresses</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Note_Financial_Aid__c</fullName>
        <description>Private notes are visible only to Financial Aid team members and any other user who has been given explicit permission to view.</description>
        <inlineHelpText>Private notes are visible only to Financial Aid team members and any other user who has been given explicit permission to view.</inlineHelpText>
        <label>Private Note - Financial Aid</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Note_Graduate_Admissions__c</fullName>
        <description>Private notes are visible only to Graduate Admissions team members and any other user who has been given explicit permission to view.</description>
        <inlineHelpText>Private notes are visible only to Graduate Admissions team members and any other user who has been given explicit permission to view.</inlineHelpText>
        <label>Private Note - Graduate Admissions</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Note_Registrar__c</fullName>
        <description>Private notes are visible only to Registrar team members and any other user who has been given explicit permission to view.</description>
        <inlineHelpText>Private notes are visible only to Registrar team members and any other user who has been given explicit permission to view.</inlineHelpText>
        <label>Private Note - Registrar</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Private_Note_Student_Business_Services__c</fullName>
        <description>Private notes are visible only to Student Business Services team members and any other user who has been given explicit permission to view.</description>
        <inlineHelpText>Private notes are visible only to Student Business Services team members and any other user who has been given explicit permission to view.</inlineHelpText>
        <label>Private Note - Student Business Services</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pkbgeolocalization__c</fullName>
        <description>Store the geolocalization of the customer on case creation from mobile.</description>
        <inlineHelpText>Where the customer was when the case has been created</inlineHelpText>
        <label>Customer Geolocalization</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <listViews>
        <fullName>ALL_ASU_EMAIL_SERVICE_CASES</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Category__c</columns>
        <columns>Functional_Group__c</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>asuemail</value>
        </filters>
        <label>ALL ASU EMAIL SERVICE CASES</label>
        <sharedTo>
            <roleAndSubordinates>UTO_University_Technology_Office</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ALL_OPEN_CASES</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Category__c</columns>
        <columns>Functional_Group__c</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.ASU_Service</value>
        </filters>
        <label>ALL OPEN CASES</label>
        <sharedTo>
            <roleAndSubordinates>UTO_University_Technology_Office</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Financial_Aid</fullName>
        <columns>Category__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>ChangeCaseOwner__Case_Owner2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Functional_Group__c</field>
            <operation>equals</operation>
            <value>Financial Aid</value>
        </filters>
        <label>All Open - Financial Aid</label>
        <sharedTo>
            <group>Student_Financial_Assistance_Case</group>
            <group>UTO_Administration</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Graduate_Admission_Services</fullName>
        <columns>Category__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>ChangeCaseOwner__Case_Owner2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Functional_Group__c</field>
            <operation>equals</operation>
            <value>Admission Services - Graduate</value>
        </filters>
        <label>All Open - Graduate Admission Services</label>
        <sharedTo>
            <group>Graduate_Admissions_Case</group>
            <group>UTO_Administration</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Registrar</fullName>
        <columns>Category__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Functional_Group__c</field>
            <operation>equals</operation>
            <value>Registrar</value>
        </filters>
        <label>All Open - Registrar</label>
        <sharedTo>
            <group>Registrar_Case</group>
            <group>UTO_Administration</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Student_Business_Services</fullName>
        <columns>Category__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Functional_Group__c</field>
            <operation>equals</operation>
            <value>Student Business Services</value>
        </filters>
        <label>All Open - Student Business Services</label>
        <sharedTo>
            <group>Student_Business_Services_Case</group>
            <group>UTO_Administration</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_Financial_Aid</fullName>
        <columns>Category__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Functional_Group__c</field>
            <operation>equals</operation>
            <value>Financial Aid</value>
        </filters>
        <label>Closed - Financial Aid</label>
        <sharedTo>
            <group>Student_Financial_Assistance_Case</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_Graduate_Admission_Services</fullName>
        <columns>Category__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Functional_Group__c</field>
            <operation>equals</operation>
            <value>Admission Services - Graduate</value>
        </filters>
        <label>Closed - Graduate Admission Services</label>
        <sharedTo>
            <group>Graduate_Admissions_Case</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_Registrar</fullName>
        <columns>Category__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Functional_Group__c</field>
            <operation>equals</operation>
            <value>Registrar</value>
        </filters>
        <label>Closed - Registrar</label>
        <sharedTo>
            <group>Registrar_Case</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_Student_Business_Services</fullName>
        <columns>Category__c</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Functional_Group__c</field>
            <operation>equals</operation>
            <value>Student Business Services</value>
        </filters>
        <label>Closed - Student Business Services</label>
        <sharedTo>
            <group>Student_Business_Services_Case</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Collections_Student_Business_Services</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Collections</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>SBS Collections</label>
        <queue>Student_Business_Services_Case</queue>
        <sharedTo>
            <group>Student_Business_Services_Case</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Downtown_Campus_Registrar</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Downtown Campus</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>REG Downtown Campus</label>
        <queue>University_Registrar_Services_Case</queue>
        <sharedTo>
            <group>Registrar_Case</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FA_Counselor_Financial_Aid</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Counselor</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>FA Counselor</label>
        <queue>Financial_Aid_Case</queue>
        <sharedTo>
            <group>Student_Financial_Assistance_Case</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FA_VIP</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>VIP</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>FA VIP</label>
        <queue>Financial_Aid_Case</queue>
        <sharedTo>
            <group>Student_Financial_Assistance_Case</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Graduation_Registrar</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Graduation</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>REG Graduation</label>
        <queue>University_Registrar_Services_Case</queue>
        <sharedTo>
            <group>Registrar_Case</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>ASU_Service</fullName>
        <active>true</active>
        <businessProcess>ASU Service</businessProcess>
        <label>ASU Service</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Disallow_Illegal_Characters_on_Email</fullName>
        <active>false</active>
        <description>If an outbound Email is sent that contains &quot;__&quot;, &quot;&lt;&lt;&quot;, or &quot;&gt;&gt;&quot; (indicating information the individual sending the email should fill out), the &quot;Illegal Characters In Outbound Email&quot; is set to True, activating this rule.</description>
        <errorConditionFormula>Illegal_Characters_In_Outbound_Email__c</errorConditionFormula>
        <errorMessage>An attempt was made to send outbound email that contains &quot;__&quot;,  &quot;&lt;&lt;&quot;, or &quot;&gt;&gt;&quot;. These brackets are used to indicate information the staff sending the email should fill out. Please edit the email, and send again.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Email_for_Closed_Forwarded</fullName>
        <active>true</active>
        <description>Forward Case To Email</description>
        <errorConditionFormula>ISPICKVAL(Status,&quot;Closed: Forwarded&quot;)
&amp;&amp;
ISBLANK(Forward_To_Email__c)
&amp;&amp;
ISBLANK(Forward_To_Email_Calculation__c)</errorConditionFormula>
        <errorMessage>A &quot;Closed: Forwarded&quot; Case must have a recipient. Either Select a &quot;Forward to Unit&quot; or enter a &quot;Forward To Email&quot;.</errorMessage>
    </validationRules>
</CustomObject>